15. added like search method
